tests/fixtures/valid/final_expr_if.torel
unit fixtures.final_expr_if;

export proc main() -> Int32 {
    if true {
        1
    } else {
        2
    }
}
