tests/fixtures/invalid/final_expr_missing_else.torel
unit fixtures.final_expr_missing_else;

export proc main() -> Int32 {
    if true {
        1
    }
}
